# RandomFields

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  Author.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: tests.yml
__tests/: test_field.py
_random_fields/: correlation_functions.py  field.py
docs/: authors.rst  conf.py  contributions.rst  index.rst  installation.rst  theory.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorials.rst
random_fields/: __version__.py  correlation_functions.py  field.py  generate_conditioned_field.py  generate_field.py  geostatistical_cpt_interpretation.py  utils.py
tests/: test_conditional_rf.py  test_field.py  test_random_field.py  test_random_field_utils.py  utils.py
tests/data/: 2d_rf_gef.pickle  2d_rf_xml.pickle  conditional_random_field_3D.pickle  conditioned_rf_3D.txt  kriging_mean_3D.txt  kriging_std_3D.txt  mesh_2D.pickle  random_field.eps  random_field_3D.eps  random_field_3D_linux.eps  random_field_3D_linux.pickle  random_field_3D_windows.eps  random_field_3D_windows.pickle
tests/data/DelftSchiedam_cpts/: 112-074.400-2022-01-CPT-01.gef  112-074.500-2022-01-CPT-01.gef  112-074.600-2022-01-CPT-01.gef  112-074.700-2022-01-CPT-01.gef  112-074.800-2022-01-CPT-01.gef  locatie_levering.kml
