[metadata]
name = random_fields
version = attr: random_fields.__version__
author = attr: random_fields.__author__
description = Random fields on unstructured grids
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages = random_fields
include_package_data = True
install_requires =
    numpy>=2.0.2
    matplotlib>=3.9.3
    gstools>=1.6.0
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.4.2
    pytest-cov>=4.1.0
    tox>=4.4
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
